overflow scrolling fix

--- a/css/material.css
+++ b/css/material.css
@@ -30,6 +30,9 @@ body {
 	vertical-align: top;
 	border: 0;
 }
+* {
+	-webkit-overflow-scrolling: touch;
+}
 
 /* Typography */
 h1, .heading {    
